# cv-parser

./: pyproject.toml
cv_parser/: commands.py  cvparser.py
cv_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
