[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-parser"
version = "0.1.0"
description = "A tool to parse and edit cover letters."
authors = [
    { name = "akregmi", email = "akregmi@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["cli", "cover letter", "automation"]
requires-python = ">=3.7"

dependencies = [
    "argparse",
    "pick",
    "python-docx",
    "python-docx-replace"
]

[project.scripts]
parsecv = "cv_parser.commands:main"

[project.urls]
Homepage = "https://github.com/akregmi/cv-parser"
Issues = "https://github.com/akregmi/cv-parser/issues"